@@ -34,6 +34,7 @@ import mobac.program.atlascreators.Maplorer;
 import mobac.program.atlascreators.Maverick;
 import mobac.program.atlascreators.MobileTrailExplorer;
 import mobac.program.atlascreators.MobileTrailExplorerCache;
+import mobac.program.atlascreators.OSMAND;
 import mobac.program.atlascreators.OSMTracker;
 import mobac.program.atlascreators.OruxMaps;
 import mobac.program.atlascreators.OruxMapsSqlite;
@@ -66,6 +67,7 @@ public enum AtlasOutputFormat {
 	MTECache("Mobile Trail Explorer Cache", MobileTrailExplorerCache.class), //
 	OruxMaps("OruxMaps", OruxMaps.class), //
 	OruxMapsSqlite("OruxMaps Sqlite", OruxMapsSqlite.class), //
+	OSMAND("OSMAND tile storage", OSMAND.class), //
 	OSMTracker("OSMTracker tile storage", OSMTracker.class), //
 	OziPng("OziExplorer (PNG & MAP)", Ozi.class), //
 	PathAway("PathAway tile cache", PathAway.class), //
